--- a/public/Scss/showAppointment.scss
+++ b/public/Scss/showAppointment.scss
@@ -100,3 +100,31 @@ hr {
 }
 
 // end
+
+.div__style {
+  grid-column: 2/-1;
+    grid-row: 6/-1;
+justify-self: center;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+
+
+    &-button {
+        text-decoration: none;
+        margin-top: 4rem;
+        border-radius: 3.5rem 0 3.5rem 0;
+        background-color: $link-hover;
+        padding: 0.5rem 1rem;
+        color: $button-text-color;
+        text-align: center;
+
+        &:hover {
+            background-color: $button-color;
+            color: $button-text-color;
+            text-decoration: none !important;
+        }
+    }
+}
